appId: nl.dirkpostma.moviesearch
---
- launchApp
- assertVisible: "Search movies..."
- tapOn: "Search movies..."
- inputText: "a beautiful mind"
- assertVisible: "A Beautiful Mind"

